@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-02T16:07:46Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2023-08-03T00:37:53Z",
+  "count" : 8,
+  "count_minmax" : [ 1, 8 ],
+  "count_decinc" : [ -0, +8 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 1, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
