@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-02T16:07:46Z",
+  "timestamp" : "2023-08-03T00:37:53Z",
   "count_outdated" : 1375,
   "uniques_outdated" : 524,
-  "count" : 1451,
-  "uniques" : 538,
+  "count" : 1458,
+  "uniques" : 541,
   "views" : [
     {
       "timestamp": "2023-07-20T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2023-08-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 8,
+      "count_minmax": [ 1, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 4,
+      "uniques_minmax": [ 1, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
