@@ -1,6 +1,6 @@
 {
-  "count": 76,
-  "uniques": 14,
+  "count": 83,
+  "uniques": 17,
   "views": [
     {
       "timestamp": "2023-07-20T00:00:00Z",
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2023-08-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 8,
+      "uniques": 4
     }
   ]
 }
